package rm.view;

import javafx.scene.Parent;

public interface View {
    Parent getRoot();
}
